// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`li > pre 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "childrenLevel": 0,
          "html": "hello",
          "id": 2,
          "level": 9,
          "parent": 1,
          "tag": "li",
        },
        {
          "children": [],
          "childrenLevel": 0,
          "html": "<pre><code>code block</code></pre>",
          "id": 3,
          "level": 9,
          "parent": 1,
          "tag": "li",
        },
      ],
      "childrenLevel": 9,
      "html": "",
      "id": 1,
      "level": 8,
      "parent": 0,
      "tag": "ul",
    },
  ],
  "childrenLevel": 8,
  "html": "",
  "id": 0,
  "level": 0,
  "parent": 0,
  "tag": "",
}
`;

exports[`li > pre 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "content": "hello",
        },
        {
          "children": [],
          "content": "<pre><code>code block</code></pre>",
        },
      ],
      "content": "",
    },
  ],
  "content": "",
}
`;

exports[`ol > li 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "childrenLevel": 0,
          "data": {
            "listIndex": 3,
          },
          "html": "3. hello",
          "id": 2,
          "level": 9,
          "parent": 1,
          "tag": "li",
        },
        {
          "children": [],
          "childrenLevel": 0,
          "data": {
            "listIndex": 4,
          },
          "html": "4. world",
          "id": 3,
          "level": 9,
          "parent": 1,
          "tag": "li",
        },
      ],
      "childrenLevel": 9,
      "html": "",
      "id": 1,
      "level": 8,
      "parent": 0,
      "tag": "ol",
    },
  ],
  "childrenLevel": 8,
  "html": "",
  "id": 0,
  "level": 0,
  "parent": 0,
  "tag": "",
}
`;

exports[`ol > li 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "content": "3. hello",
          "payload": {
            "listIndex": 3,
            "tag": "li",
          },
        },
        {
          "children": [],
          "content": "4. world",
          "payload": {
            "listIndex": 4,
            "tag": "li",
          },
        },
      ],
      "content": "",
    },
  ],
  "content": "",
}
`;

exports[`parseHtml 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "childrenLevel": 0,
                  "html": "<p>item 1</p>",
                  "id": 7,
                  "level": 9,
                  "parent": 6,
                  "tag": "li",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "childrenLevel": 0,
                          "html": "<p>item 3</p>",
                          "id": 10,
                          "level": 9,
                          "parent": 9,
                          "tag": "li",
                        },
                        {
                          "children": [],
                          "childrenLevel": 0,
                          "html": "<p>item 4</p>",
                          "id": 11,
                          "level": 9,
                          "parent": 9,
                          "tag": "li",
                        },
                      ],
                      "childrenLevel": 9,
                      "html": "",
                      "id": 9,
                      "level": 8,
                      "parent": 8,
                      "tag": "ul",
                    },
                  ],
                  "childrenLevel": 8,
                  "html": "<p>item 2</p>",
                  "id": 8,
                  "level": 9,
                  "parent": 6,
                  "tag": "li",
                },
              ],
              "childrenLevel": 9,
              "html": "",
              "id": 6,
              "level": 8,
              "parent": 5,
              "tag": "ul",
            },
            {
              "children": [
                {
                  "children": [],
                  "childrenLevel": 0,
                  "data": {
                    "listIndex": 1,
                  },
                  "html": "1. item 5",
                  "id": 13,
                  "level": 9,
                  "parent": 12,
                  "tag": "li",
                },
                {
                  "children": [],
                  "childrenLevel": 0,
                  "data": {
                    "listIndex": 2,
                  },
                  "html": "2. item 6",
                  "id": 14,
                  "level": 9,
                  "parent": 12,
                  "tag": "li",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "childrenLevel": 0,
                                  "html": "item 7.1.1",
                                  "id": 19,
                                  "level": 9,
                                  "parent": 18,
                                  "tag": "li",
                                },
                                {
                                  "children": [],
                                  "childrenLevel": 0,
                                  "html": "item 7.1.2",
                                  "id": 20,
                                  "level": 9,
                                  "parent": 18,
                                  "tag": "li",
                                },
                              ],
                              "childrenLevel": 9,
                              "html": "",
                              "id": 18,
                              "level": 8,
                              "parent": 17,
                              "tag": "ul",
                            },
                          ],
                          "childrenLevel": 8,
                          "html": "item 7.1",
                          "id": 17,
                          "level": 9,
                          "parent": 16,
                          "tag": "li",
                        },
                        {
                          "children": [],
                          "childrenLevel": 0,
                          "html": "item 7.2",
                          "id": 21,
                          "level": 9,
                          "parent": 16,
                          "tag": "li",
                        },
                      ],
                      "childrenLevel": 9,
                      "html": "",
                      "id": 16,
                      "level": 8,
                      "parent": 15,
                      "tag": "ul",
                    },
                  ],
                  "childrenLevel": 8,
                  "data": {
                    "listIndex": 3,
                  },
                  "html": "3. item 7",
                  "id": 15,
                  "level": 9,
                  "parent": 12,
                  "tag": "li",
                },
              ],
              "childrenLevel": 9,
              "html": "",
              "id": 12,
              "level": 8,
              "parent": 5,
              "tag": "ol",
            },
          ],
          "childrenLevel": 8,
          "comments": [
            "foldAll",
          ],
          "data": {
            "id": "h2",
          },
          "html": "heading 2",
          "id": 5,
          "level": 2,
          "parent": 1,
          "tag": "h2",
        },
        {
          "children": [
            {
              "children": undefined,
              "childrenLevel": 0,
              "html": "<table>
<tr>
<td>
<ul><li>this list is ignored</li></ul>
</td>
</tr>
</table>",
              "id": 23,
              "level": 7,
              "parent": 22,
              "tag": "table",
            },
            {
              "children": undefined,
              "childrenLevel": 0,
              "html": "<img src="image1.png">",
              "id": 24,
              "level": 7,
              "parent": 22,
              "tag": "img",
            },
            {
              "children": undefined,
              "childrenLevel": 0,
              "html": "<img src="image2.png">",
              "id": 25,
              "level": 7,
              "parent": 22,
              "tag": "img",
            },
          ],
          "childrenLevel": 7,
          "html": "A table",
          "id": 22,
          "level": 2,
          "parent": 1,
          "tag": "h2",
        },
      ],
      "childrenLevel": 2,
      "data": {
        "id": "h1",
      },
      "html": "heading 1",
      "id": 1,
      "level": 1,
      "parent": 0,
      "tag": "h1",
    },
  ],
  "childrenLevel": 1,
  "html": "",
  "id": 0,
  "level": 0,
  "parent": 0,
  "tag": "",
}
`;

exports[`parseHtml 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "content": "<p>item 1</p>",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "content": "<p>item 3</p>",
                        },
                        {
                          "children": [],
                          "content": "<p>item 4</p>",
                        },
                      ],
                      "content": "",
                    },
                  ],
                  "content": "<p>item 2</p>",
                },
              ],
              "content": "",
            },
            {
              "children": [
                {
                  "children": [],
                  "content": "1. item 5",
                  "payload": {
                    "listIndex": 1,
                    "tag": "li",
                  },
                },
                {
                  "children": [],
                  "content": "2. item 6",
                  "payload": {
                    "listIndex": 2,
                    "tag": "li",
                  },
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "content": "item 7.1.1",
                                },
                                {
                                  "children": [],
                                  "content": "item 7.1.2",
                                },
                              ],
                              "content": "",
                            },
                          ],
                          "content": "item 7.1",
                        },
                        {
                          "children": [],
                          "content": "item 7.2",
                        },
                      ],
                      "content": "",
                    },
                  ],
                  "content": "3. item 7",
                  "payload": {
                    "listIndex": 3,
                    "tag": "li",
                  },
                },
              ],
              "content": "",
            },
          ],
          "content": "heading 2",
          "payload": {
            "fold": 2,
            "id": "h2",
            "tag": "h2",
          },
        },
        {
          "children": [
            {
              "children": [],
              "content": "<table>
<tr>
<td>
<ul><li>this list is ignored</li></ul>
</td>
</tr>
</table>",
            },
            {
              "children": [],
              "content": "<img src="image1.png">",
            },
            {
              "children": [],
              "content": "<img src="image2.png">",
            },
          ],
          "content": "A table",
        },
      ],
      "content": "heading 1",
      "payload": {
        "id": "h1",
        "tag": "h1",
      },
    },
  ],
  "content": "",
}
`;

exports[`parseHtml with data 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "childrenLevel": 0,
                  "data": {
                    "lines": "1,2",
                  },
                  "html": "l1.1",
                  "id": 4,
                  "level": 9,
                  "parent": 3,
                  "tag": "li",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "childrenLevel": 0,
                          "data": {
                            "lines": "3,4",
                          },
                          "html": "l1.2.1",
                          "id": 7,
                          "level": 9,
                          "parent": 6,
                          "tag": "li",
                        },
                      ],
                      "childrenLevel": 9,
                      "data": {
                        "lines": "3,4",
                      },
                      "html": "",
                      "id": 6,
                      "level": 8,
                      "parent": 5,
                      "tag": "ul",
                    },
                  ],
                  "childrenLevel": 8,
                  "data": {
                    "lines": "2,4",
                  },
                  "html": "l1.2",
                  "id": 5,
                  "level": 9,
                  "parent": 3,
                  "tag": "li",
                },
              ],
              "childrenLevel": 9,
              "data": {
                "lines": "1,4",
              },
              "html": "",
              "id": 3,
              "level": 8,
              "parent": 2,
              "tag": "ul",
            },
          ],
          "childrenLevel": 8,
          "data": {
            "lines": "0,4",
          },
          "html": "l1",
          "id": 2,
          "level": 9,
          "parent": 1,
          "tag": "li",
        },
      ],
      "childrenLevel": 9,
      "data": {
        "lines": "0,4",
      },
      "html": "",
      "id": 1,
      "level": 8,
      "parent": 0,
      "tag": "ul",
    },
  ],
  "childrenLevel": 8,
  "html": "",
  "id": 0,
  "level": 0,
  "parent": 0,
  "tag": "",
}
`;

exports[`parseHtml with data 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "content": "l1.1",
                  "payload": {
                    "lines": "1,2",
                    "tag": "li",
                  },
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "content": "l1.2.1",
                          "payload": {
                            "lines": "3,4",
                            "tag": "li",
                          },
                        },
                      ],
                      "content": "",
                      "payload": {
                        "lines": "3,4",
                        "tag": "ul",
                      },
                    },
                  ],
                  "content": "l1.2",
                  "payload": {
                    "lines": "2,4",
                    "tag": "li",
                  },
                },
              ],
              "content": "",
              "payload": {
                "lines": "1,4",
                "tag": "ul",
              },
            },
          ],
          "content": "l1",
          "payload": {
            "lines": "0,4",
            "tag": "li",
          },
        },
      ],
      "content": "",
      "payload": {
        "lines": "0,4",
        "tag": "ul",
      },
    },
  ],
  "content": "",
}
`;
